[tool.poetry]
name = "awesome-pandas"
version = "0.1.0"
description = ""
authors = ["Simon Hawe <simon.hawe@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas-profiling = "^2.3"
pandas = "^0.25.3"
seaborn = "^0.9.0"
scikit-learn = "^0.21.3"
swifter = "^0.296.0"
pdpipe = "^0.0.31"
pandas-flavor = "^0.2.0"
tqdm = "^4.40"
funcy = "^1.14"

[tool.poetry.dev-dependencies]
pytest = "^4.0"
black = "19.10b"
mypy = "^0.750.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
